css/stylesheet.css
@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@700&display=swap');

body {
    background-color: #003564;
    overflow: hidden;
    margin-left: 0;
    padding-left: 0;
    min-width: 400px;
}

/* !!!!!!!!!!! BACKGROUND ANIMATION !!!!!!!!!!! */

body {
	background: linear-gradient(270deg, #495196, #3A3E61, #2d389b, #5F6AC7, #4454E0);
    background-size: 800% 100%;

    -webkit-animation: AnimationName 30s ease infinite;
    -moz-animation: AnimationName 30s ease infinite;
    animation: AnimationName 30s ease infinite;
}

@-webkit-keyframes AnimationName {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}
@-moz-keyframes AnimationName {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}
@keyframes AnimationName {
    0%{background-position:0% 50%}
    50%{background-position:100% 50%}
    100%{background-position:0% 50%}
}

/* !!!!!!!!!!! HOMEPAGE !!!!!!!!!!! */

.home {
    display: flex;
    align-items: center;
    justify-content: center;
    flex-direction: column;
    height: 100%;
    width: 100%;
    padding: 0 10% 0 10%;
}

.intro {
    align-self: self-start;
    font-family: 'Noto Sans', sans-serif;
    color: #fff;
    font-size: 64pt;
    text-align: left;
    margin: 0 0 30px 0;
}

.intro a {
    color: #5AFFE9; 
}

.greeting {
    text-align: left;
}

.github {
    text-align: center;
    width: 100%;
}

.githubLogo {
    width: 100px;
    margin: 30px 0 0 0;
    height: auto;
}

.languages img {
    width: auto;
    height: 50px;
}

/* !!!!!!!!!!! ABOUT !!!!!!!!!!! */

.about-page {
    display: flex;
    align-items: center;
    flex-direction: row;
    justify-content: center;
    flex-direction: column;
    height: 100%;
    width: 100%;
    padding: 0 10% 0 10%;
    font-family: 'Noto Sans', sans-serif;
    font-size: 22pt;
    color: #fff;
}

.about {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.about-text-box p {
    margin-bottom: 20px;
}

.about a {
    color: #5AFFE9
}

.break {
    height: 30px;
}

.about-lang {
    width: 100%;
    flex-wrap: wrap;
    display: flex;
    justify-content: space-evenly;
    flex-direction: row;
    align-self: flex-start;
    align-items: center;
}

.about-lang img {
    margin: 30px;
    height: 50px;
}

.home-ico {
    width: 100%;
}

.home-ico img {
    display: flex;
    justify-content: flex-start;
    float: left;
    height: 50px;

}

/* !!!!!!!!!!! MEDIA QUERIES !!!!!!!!!!! */

@media only screen and (max-width: 1000px) {
    .intro {
        font-size: 50pt;
    }

}

@media only screen and (max-height: 900px) {
    .intro {
        font-size: 50pt;
    }

}

@media only screen and (max-width: 800px) {

    .home {
        margin: 30px;
    }
    
    .intro {
        font-size: 34pt;
    }
    
    .githubLogo {
        width: 60px;
    }

    .about-img {
        display: none;
        border-radius: 0;
        width: 0;
        height: 0;
        margin-left: 0;
    }

    .about {
        font-size: 20pt;
    }
    }

@media only screen and (max-height: 800px) {

        .home {
            margin: 30px;
        }
        
        .intro {
            font-size: 34pt;
        }
        
        .githubLogo {
            width: 60px;
        }
    
        .about-img {
            display: none;
            border-radius: 0;
            width: 0;
            height: 0;
            margin-left: 0;
        }
    
        .about {
            font-size: 20pt;
        }
    
        }

